<resources>
    <string name="app_name">MovieShelf</string>
    <string name="register_form">Formulario de Registro</string>
    <string name="name">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="required_field">*Campo obligatorio</string>
    <string name="password">Contraseña</string>
    <string name="rep_password">Repita la contraseña</string>
    <string name="register">Registrar</string>
    <string name="info">Info</string>
    <string name="female">Femenino</string>
    <string name="male">Masculino</string>
    <string name="action">Accion</string>
    <string name="adventure">Aventura</string>
    <string name="comic">humor</string>
    <string name="love">Romantica</string>
    <string name="suspense">Suspenso</string>
    <string name="horror">Terror</string>
    <string name="genre_favorites">Géneros favoritos</string>
    <string name="date_of_birth">Fecha de nacimiento</string>
    <string name="place_of_birth">Lugar de nacimiento</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="genre">Género</string>


    <string-array name="city_list">
        <item>Seleccionar</item>
        <item>Medellín</item>
        <item>Barranquilla</item>
        <item>Pereira</item>
        <item>Cúcuta</item>
        <item>Cartagena</item>

    </string-array>

</resources>